--- a/index.html
+++ b/index.html
@@ -1,30 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>FrosTether | Sovereign Gateway</title>
+<title>FrosTether | FrostChain Hub</title>
 <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no,maximum-scale=1,viewport-fit=cover">
-<meta charset="UTF-8">
 <style>
 :root{--bg:#020202;--g:#FFD700;--gd:#B8860b;--p:#d500f9;--c:#0ff;--sb:env(safe-area-inset-bottom,20px)}
 *{margin:0;padding:0;box-sizing:border-box;-webkit-tap-highlight-color:transparent;user-select:none}
 body{background:var(--bg);color:var(--g);font-family:'Courier New',monospace;height:100vh;display:flex;flex-direction:column;align-items:center;padding:15px}
-.h{width:100%;border-bottom:2px solid var(--c);padding-bottom:10px;margin-bottom:20px;display:flex;justify-content:space-between;font-size:.7rem;text-shadow:0 0 5px var(--c)}
+.h{width:100%;border-bottom:2px solid var(--c);padding-bottom:10px;margin-bottom:20px;display:flex;justify-content:space-between;font-size:.6rem;text-shadow:0 0 5px var(--c)}
 .card{width:100%;background:#0a0a0a;border:1px solid var(--gd);border-radius:12px;padding:15px;margin-bottom:15px;box-shadow:0 0 15px rgba(0,255,255,0.1)}
-.card-head{font-size:.9rem;font-weight:900;margin-bottom:10px;display:flex;justify-content:space-between;align-items:center}
+.card-head{font-size:.8rem;font-weight:900;margin-bottom:10px;display:flex;justify-content:space-between;align-items:center}
+.stat-box{background:#000;border:1px solid #222;padding:8px;border-radius:6px;text-align:center;margin-top:5px}
 .btn-launch{width:100%;background:linear-gradient(180deg,var(--c),#008b8b);color:#000;border:1px solid #fff;padding:15px;border-radius:25px;font-size:.8rem;font-weight:900;margin-top:10px;text-decoration:none;display:block;text-align:center;text-transform:uppercase;box-shadow:0 0 15px var(--c)}
-#shield-info{font-size:.55rem;color:#0f0;text-align:center;margin-top:12px;letter-spacing:1px;animation:pulse 2s infinite}
-@keyframes pulse{50%{opacity:0.5}}
+#contract-link{font-size:.45rem;color:var(--c);text-decoration:none;display:block;margin-top:10px;text-align:center;opacity:0.7}
 </style>
 </head>
 <body>
 <div class="h">
-    <div>⛓️ voluntaryistj.base.eth</div>
-    <div style="color:var(--c)">AUTO-MINE: <span style="color:#0f0">READY</span></div>
+    <div>⛓️ FrostChain | voluntaryistj.base.eth</div>
+    <div style="color:var(--c)">PV: <span style="color:#0f0">ACTIVE</span></div>
 </div>
 
-<div class="card" style="border-color:var(--p)">
-<div class="card-head" style="color:var(--p)">🛒 FROSTMART</div>
-<button onclick="nav('mart.html')" class="btn-launch" style="background:var(--p);color:#fff">ENTER EXCHANGE</button>
+<div class="card">
+<div class="card-head">🕒 NETWORK STATUS <span>365.25 SYNC</span></div>
+<div style="font-size:1.4rem;font-weight:900;text-align:center;margin:10px 0;color:#fff" id="clock">00:00:00</div>
+<div style="display:grid;grid-template-columns:1fr 1fr;gap:10px">
+    <div class="stat-box"><span style="font-size:.4rem;color:var(--gd)">FEA BALANCE</span><span style="font-size:.9rem;display:block" id="bal">0.00</span></div>
+    <div class="stat-box"><span style="font-size:.4rem;color:var(--gd)">PV SEED</span><span style="font-size:.6rem;display:block" id="seed">---</span></div>
+</div>
+<a id="contract-link" href="https://basescan.org/token/0x9b605a1fd28331d9cfec4cbc0a39b67e8a151a8e" target="_blank">FEA: 0x9b60...1A8E ↗</a>
 </div>
 
 <div class="card">
@@ -33,15 +37,17 @@ body{background:var(--bg);color:var(--g);font-family:'Courier New',monospace;hei
     <button onclick="ignite('blocks.html')" class="btn-launch">FROSTMINES</button>
     <button onclick="ignite('gem.html')" class="btn-launch">FROSTGEMS</button>
 </div>
-<div id="shield-info">TAPPING ICON AUTO-IGNITES ENGINE</div>
 </div>
 
 <script>
-function ignite(url) {
-    localStorage.setItem('autoMine', 'true');
-    setTimeout(() => { window.location.href = url; }, 150);
+function ignite(url) { localStorage.setItem('autoMine', 'true'); setTimeout(() => { window.location.href = url; }, 150); }
+function uU(){
+    const n = new Date(); const est = new Date(n.getTime() + (n.getTimezoneOffset() * 6e4) + (-5 * 36e5));
+    document.getElementById('clock').innerText = est.toLocaleTimeString('en-US', {hour12: false});
+    document.getElementById('bal').innerText = (Number(localStorage.getItem('ftc'))||0).toFixed(2);
+    document.getElementById('seed').innerText = (localStorage.getItem('pvSeed')||'---').slice(0,8);
 }
-function nav(url) { window.location.href = url; }
+setInterval(uU, 1000); uU();
 </script>
 </body>
 </html>
